# codex-voice-steer

./: README.md  pyproject.toml
docs/: wakeword-livekit-training.md
models/wake/: README.md  scarlett.onnx
src/codex_voice_steer/: __init__.py  agents.py  audio.py  calibration.py  cli.py  codex_app_server.py  config.py  daemon.py  doctor.py  models.py  paths.py  runtime.py  segment.py  session.py  state.py  stt.py  tui.py  vad.py  voice_pipeline.py  wake.py  wake_samples.py  wake_training.py
src/codex_voice_steer/resources/wake/: scarlett.onnx
tests/: test_agents.py  test_audio.py  test_calibration.py  test_cli.py  test_codex_payloads.py  test_config.py  test_daemon_state.py  test_doctor.py  test_forbidden_scope.py  test_livekit_mine_score_receipt_clips.py  test_livekit_seed_cxv_samples.py  test_segment.py  test_session.py  test_state.py  test_stt.py  test_tui.py  test_vad.py  test_voice_pipeline.py  test_wake.py  test_wake_load.py  test_wake_samples.py  test_wake_training.py  test_wake_training_docs.py  test_wake_training_probe.py
tools/: verify_wake_model.py
tools/livekit-wakeword/: mine_score_receipt_clips.py  scarlett.yaml  seed_cxv_samples.py
tools/prompts/: wake-negative-hard.txt  wake-negative-long.txt  wake-negative-multilingual.txt  wake-negative-normal.txt
